PCHR-1267: (Temp) Fix precision of breakdown values

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-report.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-report.html
@@ -80,7 +80,7 @@
                       <td></td>
                       <td></td>
                       <td ng-repeat="absenceType in report.absenceTypes track by $index">
-                        {{(entry.type_id == absenceType.id ? entry.amount : '')}}
+                        {{(entry.type_id == absenceType.id ? (entry.amount | number:0) : '')}}
                       </td>
                       <td></td>
                     </tr>
