PCHR-1267: Display entitlement values

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-report.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-report.html
@@ -47,9 +47,9 @@
             </td>
             <td></td>
             <td></td>
-            <td>31</td>
-            <td>3</td>
-            <td>0</td>
+            <td ng-repeat="absenceType in report.absenceTypes track by $index">
+              {{absenceType.entitlement}}
+            </td>
             <td></td>
           </tr>
           <tr ng-show="report.sections.entitlements.open">
