--- a/org.civicrm.reqangular/src/common/templates/dialog.html
+++ b/org.civicrm.reqangular/src/common/templates/dialog.html
@@ -1,11 +1,11 @@
 <div class="modal-header">
-    <button type="button" class="close" ng-click="cancel()"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-    <h2 class="modal-title">{{title}}</h2>
+  <button type="button" class="close" ng-click="cancel()"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+  <h4 class="modal-title">{{title}}</h4>
 </div>
 <div class="modal-body">
-    {{msg}}
+  {{msg}}
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-secondary-outline text-uppercase" ng-click="cancel()">{{copyCancel}}</button>
-    <button type="button" class="btn {{classConfirm}} text-uppercase" ng-click="confirm()">{{copyConfirm}}</button>
+  <button type="button" class="btn btn-link text-uppercase" ng-click="cancel()">{{copyCancel}}</button>
+  <button type="button" class="btn {{classConfirm}} text-uppercase" ng-click="confirm()">{{copyConfirm}}</button>
 </div>
