PCHR-1353: Move select2 stylesheet into vendor directory

--- a/org.civicrm.bootstrapcivicrm/scss/bootstrap/bootstrap.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/bootstrap/bootstrap.scss
@@ -4,6 +4,7 @@
 @import "vendor/perfect-scrollbar/main";
 @import "vendor/ui-bootstrap/ui-bootstrap";
 @import "vendor/ui-select/ui-select";
+@import "vendor/select2/select2-bootstrap";
 
 @import "overrides/variables";
 @import "fonts/*";
